[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ShotGun.gd" type="Script" id=1]

[node name="ShotGun" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -4.0
margin_right = 42.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2( 47, 0 )

[node name="shot1" type="Node2D" parent="SpawnPoint"]
position = Vector2( 5, 0 )

[node name="shot2" type="Node2D" parent="SpawnPoint"]
position = Vector2( 5, 2 )

[node name="shot3" type="Node2D" parent="SpawnPoint"]
position = Vector2( 5, -2 )
